; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/aw2/extr_aw2-saa7146.c_snd_aw2_saa7146_pcm_trigger_stop_capture.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/aw2/extr_aw2-saa7146.c_snd_aw2_saa7146_pcm_trigger_stop_capture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_aw2_saa7146 = type { i32 }

@TR_E_A1_IN = common dso_local global i32 0, align 4
@MC1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @snd_aw2_saa7146_pcm_trigger_stop_capture(%struct.snd_aw2_saa7146* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_aw2_saa7146*, align 8
  %4 = alloca i32, align 4
  store %struct.snd_aw2_saa7146* %0, %struct.snd_aw2_saa7146** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load i32, i32* @TR_E_A1_IN, align 4
  %9 = shl i32 %8, 16
  %10 = load i32, i32* @MC1, align 4
  %11 = call i32 @WRITEREG(i32 %9, i32 %10)
  br label %12

12:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @WRITEREG(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
